--- a/analyst/src/components/header/style.css
+++ b/analyst/src/components/header/style.css
@@ -1,15 +1,14 @@
 .header{
   background-color: #096dd9;
-  height:50px
+  height:100%
 }
 ._title{
-  width: 120px;
+  width: 200px;
   color: #ffffff;
   text-align: center;
-  line-height: 45px;
-  margin-left: 20px;
+  line-height: 60px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
 }
 .linechart{
   margin-right: 5px;
