[home,visit]:页面框架雏形

--- a/analyst/src/App.less
+++ b/analyst/src/App.less
@@ -33,6 +33,12 @@
 
 }
 
+.ant-dropdown .ant-dropdown-placement-bottomLeft {
+  position: absolute;
+  left: 316px !important;
+  top: 265px !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -41,3 +47,4 @@
     transform: rotate(360deg);
   }
 }
+
