--- a/analyst/src/components/layout/index.less
+++ b/analyst/src/components/layout/index.less
@@ -1,3 +1,14 @@
 .ant-layout-content {
   background-color: #fff !important;
 }
+.page_left{
+  padding: 0 10px 10px 0 ;
+  &_title{
+    font-size: 14px;
+    color: rgba(0,0,0,.85);
+    font-weight: 500;
+  }
+}
+.ant-input-group-wrapper{
+ margin: 10px 0;
+}
