--- a/analyst/src/pages/home/index.less
+++ b/analyst/src/pages/home/index.less
@@ -1,8 +1,21 @@
 .home{
   width: 100%;
   background-color: #fff;
-  padding: 16px 0;
+  padding: 16px 16px;
   .home_card{
     display: flex;
+  }
+  .home_pv{
+    width: 100%;
+    display: flex;
+    padding: 20px 0;
+  }
+  .home_geo{
+    width: 100%;
+  }
+  .home_system{
+    width: 100%;
+    display: flex;
+    padding: 20px 0;
   }
 }
