--- a/analyst/src/components/common_card/index.less
+++ b/analyst/src/components/common_card/index.less
@@ -1,7 +1,8 @@
 .card_container {
   width: 50%;
   // padding: 0 24px;
-  height: 312px;
+  position:'relative';
+  height: 355px;
   box-sizing: border-box;
   border: 1px solid #e8e8e8;
   .card_header {
@@ -25,3 +26,4 @@
     }
   }
 }
+
