[home]：柱形图的添加

--- a/analyst/src/components/menu/index.less
+++ b/analyst/src/components/menu/index.less
@@ -8,3 +8,11 @@
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected{
   background-color: #fff !important;
 }
+
+.page_left{
+  .ant-menu{
+    background-color: #fff;
+    
+  }
+  
+}
