--- a/analyst/src/pages/home/index.less
+++ b/analyst/src/pages/home/index.less
@@ -12,6 +12,17 @@
   }
   .home_geo{
     width: 100%;
+    height: 500px;
+    display: flex;
+    .geo_img{
+      width: 60%;
+      flex: 1;
+      display: inline-block;
+    }
+    .geo_list{
+      width: 35%;
+      display: inline-block;
+    }
   }
   .home_system{
     width: 100%;
