[fe]:退出登录页面操作

--- a/analyst/src/components/header/style.css
+++ b/analyst/src/components/header/style.css
@@ -1,31 +1,30 @@
-.header{
+.header {
   background-color: #096dd9;
-  height:100%;
+  height: 100%;
 }
-._title{
+._title {
   width: 200px;
   color: #ffffff;
   text-align: center;
   line-height: 60px;
   cursor: pointer;
   font-size: 20px;
-  .setting{
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    font-size: 14px;
-  }
 }
-.linechart{
+._title .setting {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  font-size: 14px;
+}
+.linechart {
   margin-right: 5px;
-  
 }
-.ant-popover-content{
+.ant-popover-content {
   margin-top: 8px;
 }
-.ant-popover-arrow{
+.ant-popover-arrow {
   margin-top: 8px;
 }
-.log_out{
+.log_out {
   cursor: pointer;
 }
