[fe-be]:注册和注册接口的添加

--- a/analyst/src/pages/register/index.less
+++ b/analyst/src/pages/register/index.less
@@ -1,10 +1,10 @@
-.analyst_login {
+.analyst_register {
   background-color: #f6f7f9;
   height: 1000px;
   display: flex;
-  .login_form {
+  .register_form {
     width: 440px;
-    height: 420px;
+    height: 600px;
     background-color: #fff;
     position: relative;
     margin: 100px auto;
@@ -13,21 +13,27 @@
       margin: 20px auto;
       padding: 30px;
       margin-top: 50px;
-      .form_input{
+      .form_input {
         margin-bottom: 50px;
       }
-      .from_btn{
+      .from_btn {
         width: 100%;
         margin-top: 40px;
         height: 40px;
         font-size: 15px;
       }
     }
-    .tips{
+    .tips {
       color: #bebebe;
-      .register{
+      .register {
         float: right;
       }
     }
+  }
+  .ant-form-item-label > label {
+    width: 50px;
+    text-align: right;
+    display: inline-block;
+    line-height: 30px;
   }
 }
