[be-home]:接入all-接口数据

--- a/analyst/src/pages/home/components/home_card/index.less
+++ b/analyst/src/pages/home/components/home_card/index.less
@@ -2,6 +2,7 @@
   background-color: #fff;
   height: 120px;
   box-sizing: border-box;
+  margin-right: 20px;
   &_bg{
     height: 85px;
   }
@@ -19,4 +20,7 @@
     color: gray;
     font-size: 12px;
   }
+}
+.card_content:last-child{
+  margin-right: 0;
 }
